build: @packages/components 모듈에 vite, vanilla-extract 및 storybook 추가

--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@packages/components": "0.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
