feat: tsconfig 옵션 추가 및 의존성 버전 변경

--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@packages/components": "0.0.1",
+    "@packages/components": "^",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
