--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -7,7 +7,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "include": ["**/*"]
 }
