--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,38 @@
-.yarn/*
-.yarn/**
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Swap the comments on the following lines if you wish to use zero-installs
-# In that case, don't forget to run `yarn config set enableGlobalCache false`!
-# Documentation here: https://yarnpkg.com/features/caching#zero-installs
-
-!.yarn/cache
-# .pnp.*
-
+# Dependencies
 node_modules
+.pnp
+.pnp.js
 
-# dist folder
-dist
-
-# Typescript incremental build info
-tsconfig.base.tsbuildinfo
-
-# ESLint cache file
-.eslintcache
-
-# testing
-coverage
-
-# next.js
-.next/
-out/
-build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
+# Local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Testing
+coverage
+
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
+.DS_Store
+*.pem
