--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "hufscheer-client_v2",
-  "packageManager": "yarn@4.0.2",
+  "name": "hcc",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
-    "spectator": "yarn workspace spectator",
-    "manager": "yarn workspace manager",
-    "components": "yarn workspace @packages/components",
-    "hooks": "yarn workspace @packages/hooks",
-    "utils": "yarn workspace @packages/utils",
-    "lint": "eslint --fix --cache && prettier --config .prettierrc --write",
-    "postinstall": "chmod ug+x .husky/* && husky install"
+    "build": "turbo build",
+    "dev": "turbo dev --parallel",
+    "dev:manager": "turbo dev --filter manager",
+    "dev:spectator": "turbo dev --filter spectator",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "apps/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "packages/ui/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
-    "@tanstack/eslint-plugin-query": "^5.17.7",
-    "@types/node": "^20.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "@packages/eslint-config": "workspace:*",
+    "@packages/typescript-config": "workspace:*",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
-    "typescript": "^5.3.3"
+    "turbo": "latest"
+  },
+  "packageManager": "pnpm@8.9.0",
+  "engines": {
+    "node": ">=18"
   }
 }
