chore: 패키지명 수정

--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@packages/typescript-config",
+  "name": "@hcc/typescript-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
