--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
-    "@packages/eslint-config": "workspace:*",
-    "@packages/typescript-config": "workspace:*",
+    "@hcc/eslint-config": "workspace:*",
+    "@hcc/typescript-config": "workspace:*",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
