--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@packages/ui",
+  "name": "@hcc/ui",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
@@ -10,8 +10,8 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@packages/eslint-config": "workspace:*",
-    "@packages/typescript-config": "workspace:*",
+    "@hcc/eslint-config": "workspace:*",
+    "@hcc/typescript-config": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/node": "^20.10.6",
     "@types/eslint": "^8.56.1",
