build: pnpm + turbo 환경으로 마이그레이션 (#8)
* build: pnpm + turbo 환경으로 마이그레이션

* chore: 패키지명 수정

--- a/apps/manager/tsconfig.json
+++ b/apps/manager/tsconfig.json
@@ -1,19 +1,19 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "@hcc/typescript-config/nextjs.json",
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "esnext",
-    "moduleResolution": "bundler",
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "next.config.js",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
