--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -1,24 +1,27 @@
 {
   "name": "manager",
-  "packageManager": "yarn@4.0.2",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@packages/components": "^",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "@hcc/ui": "workspace:*",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@hcc/eslint-config": "workspace:*",
+    "@hcc/typescript-config": "workspace:*",
+    "@types/eslint": "^8.56.1",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
     "typescript": "^5.3.3"
   }
 }
