build: vanilla-extract 설정 및 스타일 추가

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hcc/ui": "workspace:*",
+    "@hcc/styles": "workspace:*",
+    "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/next-plugin": "^2.3.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
