--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hcc/ui": "workspace:*",
+    "@hcc/styles": "workspace:*",
+    "@vanilla-extract/css": "^1.14.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -21,6 +23,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@vanilla-extract/next-plugin": "^2.3.3",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   }
