build: axios 설치, api & type 보일러플레이트 코드 생성, 절대경로 활성화

--- a/apps/manager/tsconfig.json
+++ b/apps/manager/tsconfig.json
@@ -6,7 +6,10 @@
         "name": "next"
       }
     ],
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
