--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
+    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
     "axios": "^1.6.5",
     "next": "^14.0.4",
