--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "@hcc/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "module": "ESNext",
+    "moduleResolution": "Node"
   },
   "include": ["src", "turbo"],
   "exclude": ["node_modules", "dist"]
