build: chromatic 설치 및 image uploader 스토리 추가

--- a/docs/storybook/tsconfig.json
+++ b/docs/storybook/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "@hcc/typescript-config/base.json",
+  "compilerOptions": {
+    "incremental": true,
+    "jsx": "preserve"
+  },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
