build: storybook deploy command 추가

--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,9 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "lib/**", "storybook-static/**"]
     },
+    "deploy": {
+      "dependsOn": ["build", "lint"]
+    },
     "lint": {},
     "dev": {
       "dependsOn": ["@hcc/ui#build"],
