--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "turbo dev --parallel",
     "dev:manager": "turbo dev --filter manager",
     "dev:spectator": "turbo dev --filter spectator",
+    "deploy:storybook": "turbo run deploy --filter story",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install"
