--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -47,9 +47,10 @@ jobs:
         uses: felixmosh/turborepo-gh-artifacts@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
 
       - name: Deploy Storybook
-        run: pnpm run deploy:storybook --api="http://127.0.0.1:9080" --token="${{ secrets.GITHUB_TOKEN }}" --team="hufscheer_v2"
+        run: pnpm run deploy:storybook --api="http://127.0.0.1:9080" --token="${{ secrets.TURBO_SERVER_TOKEN }}" --team="hufscheer_v2"
 
       # - name: Publish to Chromatic
       #   uses: chromaui/action@latest
