--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -45,7 +45,8 @@ jobs:
 
       - name: Deploy Storybook
         run: pnpm run deploy:storybook
-        env: CHROMATIC_PROJECT_TOKEN=${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+        env:
+          CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
 
       # - name: Publish to Chromatic
       #   uses: chromaui/action@latest
