--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -43,10 +43,13 @@ jobs:
         run: pnpm install -no-frozen-lockfile
         working-directory: docs/storybook
 
+      - name: Environment Variables
+        run: |
+          echo "CHROMATIC_PROJECT_TOKEN=${{ secrets.CHROMATIC_PROJECT_TOKEN }}" >> .env
+          cat .env
+
       - name: Deploy Storybook
         run: pnpm run deploy:storybook
-        env:
-          CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
 
       # - name: Publish to Chromatic
       #   uses: chromaui/action@latest
