--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -8,7 +8,6 @@ on:
   push:
     branches:
       - main
-      - build/chromatic
 
 jobs:
   chromatic:
@@ -44,20 +43,11 @@ jobs:
         run: pnpm install -no-frozen-lockfile
         working-directory: docs/storybook
 
-      # - name: Environment Variables
-      #   run: |
-      #     echo "CHROMATIC_PROJECT_TOKEN=${{ secrets.CHROMATIC_PROJECT_TOKEN }}" >> .env
-      #     cat .env
-      #   working-directory: docs/storybook
+      - name: Environment Variables
+        run: |
+          echo "CHROMATIC_PROJECT_TOKEN=${{ secrets.CHROMATIC_PROJECT_TOKEN }}" >> .env
+          cat .env
+        working-directory: docs/storybook
 
-      # - name: Deploy Storybook
-      #   run: pnpm run deploy:storybook
-
-      - name: Publish to Chromatic
-        uses: chromaui/action@latest
-        with:
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: docs/storybook
-          autoAcceptChanges: 'main'
-          buildScriptName: 'build'
-          onlyChanged: true
+      - name: Deploy Storybook
+        run: pnpm run deploy:storybook
