ci: ci 동작 조건 설정

--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -2,13 +2,11 @@ name: 'Chromatic'
 
 on:
   pull_request:
+    paths:
+      - 'docs/storybook/**'
     branches:
       - main
     types: [opened, reopened]
-  push:
-    branches:
-      - main
-      - build/chromatic
 
 jobs:
   chromatic:
