--- a/docs/storybook/turbo.json
+++ b/docs/storybook/turbo.json
@@ -5,8 +5,6 @@
     "build": {
       "outputs": ["storybook-static/**"]
     },
-    "deploy": {
-      "dependsOn": ["build"]
-    }
+    "deploy": {}
   }
 }
