--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -7,6 +7,10 @@ on:
     branches:
       - main
     types: [opened, reopened]
+  push:
+    branches:
+      - main
+      - build/chromatic
 
 jobs:
   chromatic:
