build: 원격 캐시 제거

--- a/docs/storybook/turbo.json
+++ b/docs/storybook/turbo.json
@@ -5,6 +5,8 @@
     "build": {
       "outputs": ["storybook-static/**"]
     },
-    "deploy": {}
+    "deploy": {
+      "dependsOn": ["build"]
+    }
   }
 }
