--- a/apps/spectator/tsconfig.json
+++ b/apps/spectator/tsconfig.json
@@ -6,7 +6,10 @@
         "name": "next"
       }
     ],
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
