--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@hcc/ui": "workspace:*",
     "@hcc/styles": "workspace:*",
+    "@hcc/ui": "workspace:*",
+    "@stomp/stompjs": "^7.0.0",
+    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
+    "@vercel/analytics": "^1.1.2",
+    "axios": "^1.6.5",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,11 +24,13 @@
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
     "@hcc/typescript-config": "workspace:*",
-    "@vanilla-extract/next-plugin": "^2.3.3",
     "@types/eslint": "^8.56.1",
+    "@types/gtag.js": "^0.0.18",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@vanilla-extract/next-plugin": "^2.3.3",
+    "clsx": "^2.1.0",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   }
