build: uuid, ve/recipes, react-dom 설치

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,20 +6,26 @@
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
+    "dev": "tsc -w",
     "lint": "eslint . --max-warnings 0",
     "build": "tsc"
   },
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
+    "@hcc/styles": "workspace:^",
     "@hcc/typescript-config": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.8",
+    "@vanilla-extract/recipes": "^0.5.1",
     "eslint": "^8.56.0",
     "react": "^18.2.0",
-    "typescript": "^5.3.3"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.14.0"
