--- a/docs/storybook/turbo.json
+++ b/docs/storybook/turbo.json
@@ -2,6 +2,9 @@
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
   "pipeline": {
+    "dev": {
+      "dependsOn": ["dev"]
+    },
     "build": {
       "outputs": ["storybook-static/**"]
     },
