--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hcc",
   "private": true,
   "scripts": {
-    "build": "turbo build",
+    "build": "turbo build --remote-only",
     "dev": "turbo dev --parallel",
     "dev:manager": "turbo dev --filter manager",
     "dev:spectator": "turbo dev --filter spectator",
@@ -19,7 +19,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
-    "turbo": "latest"
+    "turbo": "^1.12.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
