--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -8,6 +8,12 @@
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
