build: max-warnings 0 옵션 추가, packages/styles 추가 적용

--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -11,7 +11,7 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix --max-warnings 0"
     ]
   },
   "dependencies": {
