--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -11,7 +11,7 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix --max-warnings 0"
     ]
   },
   "dependencies": {
