build: pipeline scope 수정

--- a/docs/storybook/turbo.json
+++ b/docs/storybook/turbo.json
@@ -3,10 +3,12 @@
   "extends": ["//"],
   "pipeline": {
     "dev": {
-      "dependsOn": ["dev"]
+      "dependsOn": ["^dev"]
     },
     "build": {
-      "outputs": ["storybook-static/**"]
+      "dependsOn": ["^build"],
+      "outputs": ["storybook-static/**"],
+      "inputs": ["dist/**"]
     },
     "deploy": {
       "dependsOn": ["build"]
