ci: chromatic 배포 시 캐시 적용

--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -7,10 +7,17 @@ on:
     branches:
       - main
     types: [opened, reopened]
+  push:
+    branches:
+      - perf/remote-cache
 
 jobs:
   chromatic:
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
