test: Icon story 생성

--- a/docs/storybook/package.json
+++ b/docs/storybook/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@vanilla-extract/css": "^1.14.0"
