build: @hcc/icons 설치 및 마이그레이션

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@stomp/stompjs": "^7.0.0",
