--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -2,7 +2,7 @@
   "name": "@hcc/icons",
   "version": "0.0.1",
   "module": "dist/index.js",
-  "main": "dist/index.d.ts",
+  "main": "dist/index.js",
   "sideEffects": [
     "*.svg"
   ],
