--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@stomp/stompjs": "^7.0.0",
@@ -24,6 +25,7 @@
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.6.5",
     "next": "^14.0.4",
+    "polished": "4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
