--- a/docs/storybook/package.json
+++ b/docs/storybook/package.json
@@ -18,6 +18,7 @@
     "@storybook/react": "^7.6.10",
     "@storybook/react-vite": "^7.6.10",
     "@storybook/test": "^7.6.10",
+    "@types/react": "^18.2.46",
     "@vanilla-extract/vite-plugin": "^3.9.4",
     "@vitejs/plugin-react": "^4.2.1",
     "chromatic": "^10.6.1",
