--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -24,6 +24,7 @@
     "@vanilla-extract/css": "^1.14.0",
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
