--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -22,6 +22,8 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/css-utils": "^0.1.3",
+    "@vanilla-extract/dynamic": "^2.1.0",
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
