--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/recipes": "^0.5.1",
     "axios": "^1.6.5",
     "next": "^14.0.4",
     "react": "^18.2.0",
