perf: 이미지 형식 변경 및 캐싱 타임 수정

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -9,10 +9,8 @@
     "lint": "eslint . --max-warnings 0"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix --max-warnings 0"
-    ]
+    "**/*": "prettier --write",
+    "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
     "@hcc/icons": "workspace:^",
