--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -15,8 +15,12 @@
     ]
   },
   "dependencies": {
+    "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
+    "@mantine/core": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
+    "@mantine/vanilla-extract": "^7.6.1",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
@@ -35,6 +39,9 @@
     "@types/react-dom": "^18.2.18",
     "@vanilla-extract/next-plugin": "^2.3.6",
     "eslint": "^8.56.0",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.3.3"
   }
 }
