--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint . --max-warnings 0"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix --max-warnings 0"
-    ]
+    "**/*": "prettier --write",
+    "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
+    "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
+    "@mantine/core": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
+    "@mantine/vanilla-extract": "^7.6.1",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
@@ -35,6 +37,9 @@
     "@types/react-dom": "^18.2.18",
     "@vanilla-extract/next-plugin": "^2.3.6",
     "eslint": "^8.56.0",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.3.3"
   }
 }
