--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -17,6 +17,7 @@
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@mantine/core": "^7.6.1",
+    "@mantine/form": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
     "@mantine/vanilla-extract": "^7.6.1",
     "@tanstack/react-query": "^5.17.19",
