--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -25,6 +25,7 @@
     "@vanilla-extract/css": "^1.14.0",
     "@vanilla-extract/recipes": "^0.5.1",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
