build: index redirect 추가

--- a/apps/spectator/public/netlify.toml
+++ b/apps/spectator/public/netlify.toml
@@ -4,3 +4,8 @@
   status = 200
   force = true
   headers = {Content-Type = "application/json"}
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
