--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -16,6 +16,7 @@
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
