build: 일부 파일 수정

--- a/apps/spectator/netlify.toml
+++ b/apps/spectator/netlify.toml
@@ -1,7 +1,7 @@
 [[headers]]
 for = "/"
 [headers.values]
-Access-Control-Allow-Origin = ""
+Access-Control-Allow-Origin = "*"
 
 [[redirects]]
 from = "/api/*"
