--- a/apps/spectator/netlify.toml
+++ b/apps/spectator/netlify.toml
@@ -4,3 +4,13 @@ to = "https://api.hufstreaming.site/:splat"
 status = 200
 force = true
 headers = { Access-Control-Allow-Origin = "*" }
+
+[[headers]]
+for = "/*"
+[headers.values]
+Access-Control-Allow-Origin = "*"
+
+[[headers]]
+for = "/api/*"
+[headers.values]
+Access-Control-Allow-Origin = "*"
