--- a/apps/spectator/netlify.toml
+++ b/apps/spectator/netlify.toml
@@ -3,7 +3,9 @@ from = "/api/*"
 to = "https://api.hufstreaming.site/:splat"
 status = 200
 force = true
-headers = { Access-Control-Allow-Origin = "*" }
+headers = { Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization" }
+
+[[redirects]]
 
 [[headers]]
 for = "/*"
