--- a/apps/spectator/netlify.toml
+++ b/apps/spectator/netlify.toml
@@ -11,8 +11,12 @@ headers = { Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "G
 for = "/*"
 [headers.values]
 Access-Control-Allow-Origin = "*"
+Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
 
 [[headers]]
 for = "/api/*"
 [headers.values]
 Access-Control-Allow-Origin = "*"
+Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
