--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -25,8 +25,10 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/recipes": "^0.5.1",
     "axios": "^1.6.5",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "next": "^14.0.4",
     "pretendard": "^1.3.9",
