--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.0.5",
     "next": "^14.0.4",
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
