--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@hcc/icons": "workspace:^",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-toast": "^1.1.5",
     "@vanilla-extract/css": "^1.14.0",
     "clsx": "^2.1.0",
