--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3001 -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.6.1",
+    "@egjs/react-conveyer": "^1.7.1",
     "@egjs/react-flicking": "^3.8.3",
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
