build: add vaul

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.5",
     "react-calendar": "^5.0.0",
-    "react-hook-form": "^7.51.5"
+    "react-hook-form": "^7.51.5",
+    "vaul": "^0.9.1"
   }
 }
