--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,4 @@
 {
   "extends": "@hcc/typescript-config/vite-library.json",
-  "include": ["src", "vite.config.ts", "src/vite-env.d.ts"
-  ]
+  "include": ["src"]
 }
