--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -2,6 +2,7 @@
   "name": "manager",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -33,12 +34,10 @@
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
     "@hcc/typescript-config": "workspace:*",
-    "@types/eslint": "^8.56.12",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vanilla-extract/next-plugin": "^2.4.9",
-    "eslint": "^8.57.1",
     "typescript": "^5.7.3"
   }
 }
