build: update husky logic

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:spectator": "turbo build --filter spectator",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
