feat: 스타일 패키지 exports 옵션 추가

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "@hcc/typescript-config/react-library.json",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "ESNext",
-    "moduleResolution": "Node"
+    "moduleResolution": "bundler",
   },
   "include": ["src", "turbo"],
   "exclude": ["node_modules", "dist"]
