--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -2,9 +2,19 @@
   "name": "@hcc/styles",
   "version": "0.0.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "default": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./globals": {
+      "default": "./dist/globals.css.js",
+      "import": "./dist/globals.css.js",
+      "types": "./dist/globals.css.d.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "build": "tsc"
