build: Amplitude를 Sentry로 변경 (#366)
* build: Amplitude 관련 코드 제거

* build: 매니저 앱에 sentry 추가

* build: 관객 앱에 sentry 추가

* chore: 주석 제거

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --port 3000 --hostname 0.0.0.0",
+    "dev": "next dev --port 3001 -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
@@ -14,26 +14,25 @@
     "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "^2.11.11",
     "@egjs/react-conveyer": "^1.7.1",
     "@egjs/react-flicking": "^3.8.3",
     "@hcc/api": "workspace:*",
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
-    "@next/third-parties": "^15.1.6",
+    "@next/third-parties": "^15.1.7",
+    "@sentry/nextjs": "^8.55.0",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/css-utils": "^0.1.4",
     "@vanilla-extract/dynamic": "^2.1.2",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "framer-motion": "^12.0.6",
-    "next": "^15.1.6",
+    "framer-motion": "^12.4.3",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -41,10 +40,10 @@
     "@hcc/eslint-config": "workspace:*",
     "@hcc/typescript-config": "workspace:*",
     "@types/gtag.js": "^0.0.18",
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vanilla-extract/next-plugin": "^2.4.9",
+    "@vanilla-extract/next-plugin": "^2.4.10",
     "clsx": "^2.1.1",
     "typescript": "^5.7.3"
   }
