feat: 페이지 로딩 ProgressBar 추가

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -14,6 +14,7 @@
     "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
+    "@bprogress/next": "^3.2.4",
     "@egjs/react-conveyer": "^1.7.1",
     "@egjs/react-flicking": "^3.8.3",
     "@hcc/api": "workspace:*",
