feat: implement icon library with layout and global styles

--- a/biome.json
+++ b/biome.json
@@ -6,6 +6,9 @@
     "experimentalScannerIgnores": [
       "node_modules/**",
       "dist/**",
+      "lib/**",
+      "**/lib/**",
+      "**/dist/**",
       ".turbo/**",
       ".next/**",
       "pnpm-lock.yaml"
