test: verify pre-commit hook works

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -14,7 +14,7 @@
       "biome lint --fix",
       "biome format --write"
     ],
-    "*.{json,md,yml,yaml}": [
+    "*.{json,yml,yaml}": [
       "biome format --write"
     ]
   },
