feat: update global styles and header component with new logo and colors

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "biome lint --fix",
       "biome format --write"
     ],
-    "*.{json,yml,yaml}": [
+    "*.{json,yml}": [
       "biome format --write"
     ]
   },
