--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -13,12 +13,10 @@
     "*.{js,jsx,ts,tsx}": [
       "biome lint --fix",
       "biome format --write"
-    ],
-    "*.{json,yml,yaml}": [
-      "biome format --write"
     ]
   },
   "dependencies": {
+    "@hcc/icons": "workspace:*",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
