--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "@hcc/icons": "workspace:*",
-    "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^15.4.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@hcc/typescript-config": "workspace:*",
