feat: integrate ProgressProvider and QueryClientProvider in layout, update header styles, and add new dependencies

--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -16,6 +16,8 @@
     ]
   },
   "dependencies": {
+    "@bprogress/next": "^3.2.12",
+    "@hcc/api-base": "workspace:*",
     "@hcc/icons": "workspace:*",
     "next": "^15.4.5",
     "react": "^19.1.1",
