fix(package): update sideEffects to include CSS files

--- a/packages/style/package.json
+++ b/packages/style/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {},
-  "sideEffects": false,
+  "sideEffects": [
+    "css/*.css"
+  ],
   "type": "module",
   "exports": {
     "./theme.css": "./css/theme.css",
