feat(ui): update package.json to streamline build process and adjust entry points

--- a/packages/api-base/package.json
+++ b/packages/api-base/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "rm -rf dist && node build.js && tsc",
-    "dev": "node build.js --watch",
     "start": "next start",
     "lint": "biome lint .",
     "format": "biome format --write ."
@@ -15,21 +13,10 @@
       "biome format --write"
     ]
   },
-  "sideEffects": false,
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "files": [
-    "dist"
-  ],
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
   "peerDependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
