feat(ui): refactor Badge, Button, Input, and Select components to use ts-pattern for size and variant handling

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "clsx": "^2.1.1",
+    "sonner": "^2.0.7",
     "ts-pattern": "^5.8.0"
   }
 }
