feat(web): 매니저 홈, 대회관리 페이지 추가 (#409)
* feat(ui): add GroupIcon and PersonIcon components

* feat(ui): add management buttons with icons to homepage

* feat(ui): update homepage layout and routing for management sections

* feat(api): update API base URL and implement CORS handling in new route

* fix(ui): improve error handling in login form by logging errors to console

* fix(ui): enforce flex properties in Toast component for consistent layout

* feat(ui): implement bottom menu and league card components for homepage

* feat(ui): refactor color definitions to use CSS variables and enhance header component with back navigation

* feat(ui): add league management page with header and create menu component

* feat(ui): add MatchOverview component and integrate it into the homepage

* feat(ui): implement GameCard and LeagueOverview components for enhanced league and game display

* feat(toolkit): add formatTime utility function and update package configuration

* feat(build): add esbuild configuration for bundling TypeScript and JavaScript files

* feat(config): update biome schema version to 2.2.0

* feat(ui): format league dates using formatTime utility in LeagueOverview component

* feat(ui): enhance layout structure and styling in BottomMenu, MatchOverview, and Layout components

* feat(types): change leagueProgress type from string to LeagueStateType in LeagueDetailType

* feat(types): refactor LeagueStateType to use a constant object for state values

* feat(ui): improve spacing and formatting in BottomMenu component

--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.json"],
+    "includes": ["**/*.ts", "**/*.tsx", "**/*.json", "**/*.js"],
     "experimentalScannerIgnores": [
       "node_modules/**",
       "dist/**",
